Added: Link of app

--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pic2Ans | Home</title>
+    <title>Pic2Ans - Smart Learning Assistant | Take Pictures, Get Answers</title>
+    <meta name="description" content="Pic2Ans is a smart learning assistant that helps you get instant answers by taking pictures of your questions. Store study materials as images and access your knowledge base easily." />
+    
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Pic2Ans - Smart Learning Assistant" />
+    <meta property="og:description" content="Get instant answers by taking pictures of your questions. The smart way to access your study materials." />
+    <meta property="og:image" content="https://ldgnpdudaohjifgktmst.supabase.co/storage/v1/object/public/ruza//Download%20our%20app%20and%20imporve%20your%20study!.png" />
+    <meta property="og:url" content="https://pic2ans.vercel.app" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
